Drop --nolog, which was deprecated before last release
New syntax is --no-log.
Also document in comments when to drop support for -internal-encoding

--- a/run/john.conf
+++ b/run/john.conf
@@ -216,7 +216,7 @@ SessionFileProtect = Disabled
 # reused by a new session.
 # (Of course, a restored session will always be allowed to append to an
 # existing log file.)
-# Unless you use the --nolog option, setting LogFileProtect will also
+# Unless you use the --no-log option, setting LogFileProtect will also
 # prevent overwriting existing session files.
 LogFileProtect = Disabled
 
